manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: add-task
spec:
  selector:
    matchLabels:
      app: add-task
  template:
    metadata:
      labels:
        app: add-task
    spec:
      containers:
      - name: addtask-container
        image: todoappacr2213.azurecr.io/addtask:v2
        ports:
        - containerPort: 8000
