manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  type: LoadBalancer
  selector:
    app: add-task
  ports:
  - port: 80
    targetPort: 8000
